globus-scheduler-event-generator (5.8-2+gt6.@distro@) @distro@; urgency=low

  * Manpage format mistake

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:57:04 -0500

globus-scheduler-event-generator (5.7-2+gt6.@distro@) @distro@; urgency=low

  * Add .txt documentation to filelist

 -- Globus Toolkit <support@globus.org>  Tue, 30 Sep 2014 08:52:00 -0400

globus-scheduler-event-generator (5.7-1+gt6.@distro@) @distro@; urgency=low

  * Use mixed case man page install for all packages
  * Doxygen markup fixes
  * Fix broken globus-scheduler-event-generator-admin script
  * Add documentation for globus-scheduler-event-generator and globus-scheduler-event-generator-admin
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 11:10:37 -0400

globus-scheduler-event-generator (5.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-scheduler-event-generator (5.5-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-scheduler-event-generator (5.5-1+gt6.@distro@) @distro@; urgency=low

  * Incorrect argument order to globus_cond_wait

 -- Globus Toolkit <support@globus.org>  Wed, 06 Aug 2014 13:39:17 -0400

globus-scheduler-event-generator (5.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-scheduler-event-generator (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:39 -0400

globus-scheduler-event-generator (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400
