@@ -1,6 +1,6 @@
 Name: globus-scheduler-event-generator
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_scheduler_event_generator-5.8.tar.gz
+Source: http://www.globus.org/ftppub/gt6/packages/globus_scheduler_event_generator-5.9.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
