@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-scheduler-event-generator
 _name = globus_scheduler_event_generator
-version = 5.8
+version = 5.9
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
@@ -28,6 +28,7 @@ _libdir = $(_prefix)/lib/$(DEB_HOST_MULTIARCH)
 _datadir = $(_prefix)/share
 _mandir = $(_datadir)/man
 _docdir = $(_datadir)/doc
+_localstatedir = /var
 
 DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
 
@@ -66,6 +67,7 @@ configure-stamp: sed-stamp
 	   --datadir='$(_datadir)/globus' \
 	   --libdir='$(_libdir)' \
 	   --libexecdir='$(_datadir)/globus' \
+	   --localstatedir='$(_localstatedir)' \
 	   --disable-static \
 	   --enable-doxygen \
            --with-lsb \
